@@ -71,8 +71,6 @@ public interface ReaderInterface {
 
 	public void reload() throws SearchLibException;
 
-	public void swap(long version, boolean deleteOld) throws SearchLibException;
-
 	public void push(URI dest) throws SearchLibException;
 
 	public long getVersion();
